--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "framer-motion": "^10.13.1",
     "next": "13.4.12",
     "postcss": "8.4.27",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
     "primereact": "^9.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
